generated-in/vanilla/dcimgui_nodefaultargfunctions_internal.h

typedef struct ImRect_t ImRect;            
typedef struct ImGuiTreeNodeStackData_t ImGuiTreeNodeStackData;              
typedef struct ImGuiTypingSelectRequest_t ImGuiTypingSelectRequest;          
typedef struct ImGuiWindow_t ImGuiWindow;                                    
struct ImRect_t
{
    ImVec2 Min;  
    ImVec2 Max;  
};
typedef enum
{
    ImGuiPlotType_Lines,
    ImGuiPlotType_Histogram,
} ImGuiPlotType;
struct ImGuiTreeNodeStackData_t
{
    ImGuiID             ID;
    ImGuiTreeNodeFlags  TreeFlags;
    ImGuiItemFlags      ItemFlags;  
    ImRect              NavRect;    
    float               DrawLinesX1;
    float               DrawLinesToNodesY2;
    ImGuiTableColumnIdx DrawLinesTableColumn;
};
struct ImGuiTypingSelectRequest_t
{
    ImGuiTypingSelectFlags Flags;           
    int                    SearchBufferLen;
    const char*            SearchBuffer;    
    bool                   SelectRequest;   
    bool                   SingleCharMode;  
    ImS8                   SingleCharSize;  
};
struct ImGuiWindow_t
{
    ImGuiContext*            Ctx;                                             
    char*                    Name;                                            
    ImGuiID                  ID;                                              
    ImGuiWindowFlags         Flags;                                           
    ImGuiChildFlags          ChildFlags;                                      
    ImGuiViewportP*          Viewport;                                        
    ImVec2                   Pos;                                             
    ImVec2                   Size;                                            
    ImVec2                   SizeFull;                                        
    ImVec2                   ContentSize;                                     
    ImVec2                   ContentSizeIdeal;
    ImVec2                   ContentSizeExplicit;                             
    ImVec2                   WindowPadding;                                   
    float                    WindowRounding;                                  
    float                    WindowBorderSize;                                
    float                    TitleBarHeight, MenuBarHeight;                   
    float                    DecoOuterSizeX1, DecoOuterSizeY1;                
    float                    DecoOuterSizeX2, DecoOuterSizeY2;                
    float                    DecoInnerSizeX1, DecoInnerSizeY1;                
    int                      NameBufLen;                                      
    ImGuiID                  MoveId;                                          
    ImGuiID                  ChildId;                                         
    ImGuiID                  PopupId;                                         
    ImVec2                   Scroll;
    ImVec2                   ScrollMax;
    ImVec2                   ScrollTarget;                                    
    ImVec2                   ScrollTargetCenterRatio;                         
    ImVec2                   ScrollTargetEdgeSnapDist;                        
    ImVec2                   ScrollbarSizes;                                  
    bool                     ScrollbarX, ScrollbarY;                          
    bool                     ScrollbarXStabilizeEnabled;                      
    ImU8                     ScrollbarXStabilizeToggledHistory;               
    bool                     Active;                                          
    bool                     WasActive;
    bool                     WriteAccessed;                                   
    bool                     Collapsed;                                       
    bool                     WantCollapseToggle;
    bool                     SkipItems;                                       
    bool                     SkipRefresh;                                     
    bool                     Appearing;                                       
    bool                     Hidden;                                          
    bool                     IsFallbackWindow;                                
    bool                     IsExplicitChild;                                 
    bool                     HasCloseButton;                                  
    signed char              ResizeBorderHovered;                             
    signed char              ResizeBorderHeld;                                
    short                    BeginCount;                                      
    short                    BeginCountPreviousFrame;                         
    short                    BeginOrderWithinParent;                          
    short                    BeginOrderWithinContext;                         
    short                    FocusOrder;                                      
    ImGuiDir                 AutoPosLastDirection;
    ImS8                     AutoFitFramesX, AutoFitFramesY;
    bool                     AutoFitOnlyGrows;
    ImS8                     HiddenFramesCanSkipItems;                        
    ImS8                     HiddenFramesCannotSkipItems;                     
    ImS8                     HiddenFramesForRenderOnly;                       
    ImS8                     DisableInputsFrames;                             
    ImGuiWindowBgClickFlags  BgClickFlags : 8;                                
    ImGuiCond                SetWindowPosAllowFlags : 8;                      
    ImGuiCond                SetWindowSizeAllowFlags : 8;                     
    ImGuiCond                SetWindowCollapsedAllowFlags : 8;                
    ImVec2                   SetWindowPosVal;                                 
    ImVec2                   SetWindowPosPivot;                               
    ImVector_ImGuiID         IDStack;                                         
    ImGuiWindowTempData      DC;                                              
    ImRect                   OuterRectClipped;                                
    ImRect                   InnerRect;                                       
    ImRect                   InnerClipRect;                                   
    ImRect                   WorkRect;                                        
    ImRect                   ParentWorkRect;                                  
    ImRect                   ClipRect;                                        
    ImRect                   ContentRegionRect;                               
    ImVec2ih                 HitTestHoleSize;                                 
    ImVec2ih                 HitTestHoleOffset;
    int                      LastFrameActive;                                 
    float                    LastTimeActive;                                  
    ImGuiStorage             StateStorage;
    ImVector_ImGuiOldColumns ColumnsStorage;
    float                    FontWindowScale;                                 
    float                    FontWindowScaleParents;
    float                    FontRefSize;                                     
    int                      SettingsOffset;                                  
    ImDrawList*              DrawList;                                        
    ImDrawList               DrawListInst;
    ImGuiWindow*             ParentWindow;                                    
    ImGuiWindow*             ParentWindowInBeginStack;
    ImGuiWindow*             RootWindow;                                      
    ImGuiWindow*             RootWindowPopupTree;                             
    ImGuiWindow*             RootWindowForTitleBarHighlight;                  
    ImGuiWindow*             RootWindowForNav;                                
    ImGuiWindow*             ParentWindowForFocusRoute;                       
    ImGuiWindow*             NavLastChildNavWindow;                           
    ImGuiID                  NavLastIds[ImGuiNavLayer_COUNT];                 
    ImRect                   NavRectRel[ImGuiNavLayer_COUNT];                 
    ImVec2                   NavPreferredScoringPosRel[ImGuiNavLayer_COUNT];  
    ImGuiID                  NavRootFocusScopeId;                             
    int                      MemoryDrawListIdxCapacity;                       
    int                      MemoryDrawListVtxCapacity;
    bool                     MemoryCompacted;                                 
};
CIMGUI_API void             ImGui_UpdateWindowParentAndRootLinks(ImGuiWindow* window, ImGuiWindowFlags flags, ImGuiWindow* parent_window);
CIMGUI_API void             ImGui_UpdateWindowSkipRefresh(ImGuiWindow* window);
CIMGUI_API void        ImGui_UnregisterUserTexture(ImTextureData* tex);
CIMGUI_API void        ImGui_UnregisterFontAtlas(ImFontAtlas* atlas);
CIMGUI_API void        ImGui_UpdateCurrentFontSize(float restore_font_size_after_scaling);
CIMGUI_API void ImGui_UpdateInputEvents(bool trickle_fast_inputs);
CIMGUI_API void ImGui_UpdateMouseMovingWindowNewFrame(void);
CIMGUI_API void ImGui_UpdateMouseMovingWindowEndFrame(void);
CIMGUI_API int                       ImGui_TypingSelectFindMatch(ImGuiTypingSelectRequest* req, int items_count, const char* (*get_item_name_func)(void*, int), void* user_data, int nav_item_idx);
CIMGUI_API int                       ImGui_TypingSelectFindNextSingleCharMatch(ImGuiTypingSelectRequest* req, int items_count, const char* (*get_item_name_func)(void*, int), void* user_data, int nav_item_idx);
CIMGUI_API int                       ImGui_TypingSelectFindBestLeadingMatch(ImGuiTypingSelectRequest* req, int items_count, const char* (*get_item_name_func)(void*, int), void* user_data);
CIMGUI_API void ImGui_TreeNodeDrawLineToTreePop(const ImGuiTreeNodeStackData* data);
CIMGUI_API void ImGui_TreePushOverrideID(ImGuiID id);
CIMGUI_API void ImGui_TreeNodeSetOpen(ImGuiID storage_id, bool open);
CIMGUI_API bool ImGui_TreeNodeUpdateNextOpen(ImGuiID storage_id, ImGuiTreeNodeFlags flags);  
CIMGUI_API int ImGui_PlotEx(ImGuiPlotType plot_type, const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset, const char* overlay_text, float scale_min, float scale_max, ImVec2 size_arg);