generated-out/vanilla/dear-imgui-raw-vanilla-internal/src/DearImGui/Raw/Internal/ImGui.hsc


-- C: void ImGui::TreeNodeDrawLineToTreePop(const ImGuiTreeNodeStackData* data)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_TreeNodeDrawLineToTreePop"
  imGui_TreeNodeDrawLineToTreePop :: (Ptr ImGuiTreeNodeStackData) -> IO ()
-- C: void ImGui::TreeNodeSetOpen(ImGuiID storage_id, bool open)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_TreeNodeSetOpen"
  imGui_TreeNodeSetOpen :: ImGuiID -> CBool -> IO ()
-- C: bool ImGui::TreeNodeUpdateNextOpen(ImGuiID storage_id, ImGuiTreeNodeFlags flags)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_TreeNodeUpdateNextOpen"
  imGui_TreeNodeUpdateNextOpen :: ImGuiID -> ImGuiTreeNodeFlags -> IO CBool
-- C: void ImGui::TreePushOverrideID(ImGuiID id)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_TreePushOverrideID"
  imGui_TreePushOverrideID :: ImGuiID -> IO ()
-- C: int ImGui::TypingSelectFindBestLeadingMatch(ImGuiTypingSelectRequest* req, int items_count, const char* (*get_item_name_func)(void*, int) get_item_name_func, void* user_data)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_TypingSelectFindBestLeadingMatch"
  imGui_TypingSelectFindBestLeadingMatch :: (Ptr ImGuiTypingSelectRequest) -> CInt -> (FunPtr ((Ptr ()) -> CInt -> IO CString)) -> (Ptr ()) -> IO CInt
-- C: int ImGui::TypingSelectFindMatch(ImGuiTypingSelectRequest* req, int items_count, const char* (*get_item_name_func)(void*, int) get_item_name_func, void* user_data, int nav_item_idx)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_TypingSelectFindMatch"
  imGui_TypingSelectFindMatch :: (Ptr ImGuiTypingSelectRequest) -> CInt -> (FunPtr ((Ptr ()) -> CInt -> IO CString)) -> (Ptr ()) -> CInt -> IO CInt
-- C: int ImGui::TypingSelectFindNextSingleCharMatch(ImGuiTypingSelectRequest* req, int items_count, const char* (*get_item_name_func)(void*, int) get_item_name_func, void* user_data, int nav_item_idx)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_TypingSelectFindNextSingleCharMatch"
  imGui_TypingSelectFindNextSingleCharMatch :: (Ptr ImGuiTypingSelectRequest) -> CInt -> (FunPtr ((Ptr ()) -> CInt -> IO CString)) -> (Ptr ()) -> CInt -> IO CInt
-- C: void ImGui::UnregisterFontAtlas(ImFontAtlas* atlas)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_UnregisterFontAtlas"
  imGui_UnregisterFontAtlas :: (Ptr ImFontAtlas) -> IO ()
-- C: void ImGui::UnregisterUserTexture(ImTextureData* tex)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_UnregisterUserTexture"
  imGui_UnregisterUserTexture :: (Ptr ImTextureData) -> IO ()
-- C: void ImGui::UpdateCurrentFontSize(float restore_font_size_after_scaling)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_UpdateCurrentFontSize"
  imGui_UpdateCurrentFontSize :: CFloat -> IO ()
foreign import capi unsafe "DearImGuiWrappers.h ImGui_UpdateHoveredWindowAndCaptureFlags_wrap"
  c_imGui_UpdateHoveredWindowAndCaptureFlags :: (Ptr ImVec2) -> IO ()

imGui_UpdateHoveredWindowAndCaptureFlags :: ImVec2 -> IO ()
imGui_UpdateHoveredWindowAndCaptureFlags mouse_pos =
  with mouse_pos $ \_p0 -> c_imGui_UpdateHoveredWindowAndCaptureFlags _p0

-- C: void ImGui::UpdateInputEvents(bool trickle_fast_inputs)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_UpdateInputEvents"
  imGui_UpdateInputEvents :: CBool -> IO ()
-- C: void ImGui::UpdateMouseMovingWindowEndFrame()
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_UpdateMouseMovingWindowEndFrame"
  imGui_UpdateMouseMovingWindowEndFrame :: IO ()
-- C: void ImGui::UpdateMouseMovingWindowNewFrame()
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_UpdateMouseMovingWindowNewFrame"
  imGui_UpdateMouseMovingWindowNewFrame :: IO ()
-- C: void ImGui::UpdateWindowParentAndRootLinks(ImGuiWindow* window, ImGuiWindowFlags flags, ImGuiWindow* parent_window)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_UpdateWindowParentAndRootLinks"
  imGui_UpdateWindowParentAndRootLinks :: (Ptr ImGuiWindow) -> ImGuiWindowFlags -> (Ptr ImGuiWindow) -> IO ()
-- C: void ImGui::UpdateWindowSkipRefresh(ImGuiWindow* window)
foreign import capi unsafe "dcimgui_nodefaultargfunctions_internal.h ImGui_UpdateWindowSkipRefresh"
  imGui_UpdateWindowSkipRefresh :: (Ptr ImGuiWindow) -> IO ()
foreign import capi unsafe "DearImGuiWrappers.h ImGui_WindowPosAbsToRel_wrap"
  c_imGui_WindowPosAbsToRel :: (Ptr ImGuiWindow) -> (Ptr ImVec2) -> (Ptr ImVec2) -> IO ()

imGui_WindowPosAbsToRel :: (Ptr ImGuiWindow) -> ImVec2 -> IO ImVec2
imGui_WindowPosAbsToRel window p =
  with p $ \_p1 -> alloca $ \_pOut -> c_imGui_WindowPosAbsToRel window _p1 _pOut >> peek _pOut

foreign import capi unsafe "DearImGuiWrappers.h ImGui_WindowPosRelToAbs_wrap"
  c_imGui_WindowPosRelToAbs :: (Ptr ImGuiWindow) -> (Ptr ImVec2) -> (Ptr ImVec2) -> IO ()

imGui_WindowPosRelToAbs :: (Ptr ImGuiWindow) -> ImVec2 -> IO ImVec2
imGui_WindowPosRelToAbs window p =
  with p $ \_p1 -> alloca $ \_pOut -> c_imGui_WindowPosRelToAbs window _p1 _pOut >> peek _pOut

foreign import capi unsafe "DearImGuiWrappers.h ImGui_WindowRectAbsToRel_wrap"
  c_imGui_WindowRectAbsToRel :: (Ptr ImGuiWindow) -> (Ptr ImRect) -> (Ptr ImRect) -> IO ()

imGui_WindowRectAbsToRel :: (Ptr ImGuiWindow) -> ImRect -> IO ImRect
imGui_WindowRectAbsToRel window r =
  with r $ \_p1 -> alloca $ \_pOut -> c_imGui_WindowRectAbsToRel window _p1 _pOut >> peek _pOut

foreign import capi unsafe "DearImGuiWrappers.h ImGui_WindowRectRelToAbs_wrap"
  c_imGui_WindowRectRelToAbs :: (Ptr ImGuiWindow) -> (Ptr ImRect) -> (Ptr ImRect) -> IO ()

imGui_WindowRectRelToAbs :: (Ptr ImGuiWindow) -> ImRect -> IO ImRect
imGui_WindowRectRelToAbs window r =
  with r $ \_p1 -> alloca $ \_pOut -> c_imGui_WindowRectRelToAbs window _p1 _pOut >> peek _pOut

